%% ER Diagram (Mermaid) based on prisma/schema.prisma
erDiagram
  User {
    String id PK
    String name
    String email UK
    Boolean emailVerified
    String image
    DateTime createdAt
    DateTime updatedAt
    String stripeCustomerId UK
    String role
    Boolean banned
    String banReason
    DateTime banExpires
  }

  Session {
    String id PK
    DateTime expiresAt
    String token UK
    DateTime createdAt
    DateTime updatedAt
    String ipAddress
    String userAgent
    String userId FK
    String impersonatedBy
  }

  Account {
    String id PK
    String accountId
    String providerId
    String userId FK
    String accessToken
    String refreshToken
    String idToken
    DateTime accessTokenExpiresAt
    DateTime refreshTokenExpiresAt
    String scope
    String password
    DateTime createdAt
    DateTime updatedAt
  }

  Course {
    String id PK
    String title
    String description
    String fileKey
    Int price
    Int duration
    Enum level
    String stripePriceId UK
    String category
    String smallDescription
    String slug UK
    Enum status
    DateTime createdAt
    DateTime updatedAt
    String userId FK
  }

  Chapter {
    String id PK
    String title
    Int position
    DateTime createdAt
    DateTime updatedAt
    String courseId FK
  }

  Lesson {
    String id PK
    String title
    String description
    String thumbnailKey
    String videoKey
    Int position
    DateTime createdAt
    DateTime updatedAt
    String chapterId FK
  }

  Enrollment {
    String id PK
    Int amout
    Enum status
    DateTime createdAt
    DateTime updatedAt
    String courseId FK
    String userId FK
  }

  LessonProgress {
    String id PK
    Boolean completed
    DateTime createdAt
    DateTime updatedAt
    String userId FK
    String lessonId FK
  }

  User ||--o{ Session : has
  User ||--o{ Account : has
  User ||--o{ Course : owns
  User ||--o{ Enrollment : has
  User ||--o{ LessonProgress : has
  Course ||--o{ Chapter : has
  Chapter ||--o{ Lesson : has
  Lesson ||--o{ LessonProgress : has
  Course ||--o{ Enrollment : has

